# voyageur-de-commerce

./: Makefile  README.md  monExecutable.out
include/: TSPInstance.h  struct.h
log/debog/: instruction  testUnitaire
src/: TSPInstance.cpp  monAlgo1.cpp  monAlgo2.cpp  monProgramme.cpp  struct.cpp
tmp/TSP/: 2026 04 28 19 44 03 TSP.txt
tmp/TSP/claude-version/: CMakeLists.txt  Makefile  README.md  backup.sh
tmp/TSP/claude-version/include/: CoordDistanceCalc.h  ExplicitMatrixReader.h  TSPInstance.h  TSPParser.h  TSPVisualizer.h
tmp/TSP/claude-version/instances/: memo.txt
tmp/TSP/claude-version/log/: log.txt
tmp/TSP/claude-version/src/: CoordDistanceCalc.cpp  ExplicitMatrixReader.cpp  TSPParser.cpp  TSPVisualizer.cpp  main.cpp
